Modificando el codigo para Render

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nodemon": "^3.1.10"
   },
   "scripts": {
+    "start": "node src/index.js",
     "seed": "node seedMovies.js",
     "dev": "nodemon src/index.js"
   }
