--- a/.env
+++ b/.env
@@ -1,13 +1,10 @@
 # backend/.env
 
- # DEFINE EL PUERTO EN EL QUE CORRERÁ EL SERVIDOR EXPRESS
-PORT=4000
-
-# URL DE CONEXIÓN A LA BASE DE DATOS MONGODB USANDO MONGOOSE (CONECTA CON ATLAS)
+# URL DE CONEXIÓN A MONGODB ATLAS
 MONGODB_URI=mongodb+srv://jotta-nodo:tTcAHgsWNWXCEceu@cluster0.yanyu2g.mongodb.net/nodocine?retryWrites=true&w=majority
 
-# SECRETO USADO PARA FIRMAR Y VERIFICAR TOKENS JWT (NO COMPARTIR)
+# SECRETO PARA JWT
 JWT_SECRET=TuSecretoMuySeguro
 
-# CLAVE DE API DE THE MOVIE DATABASE (TMDB), USADA PARA CONSULTAR DATOS DE PELÍCULAS
+# API KEY DE TMDB
 TMDB_API_KEY=fa1ed90cd920f24c2ef335e6d5d0bff4
